<resources>
    <string name="app_name">Grievience Client</string>
    <string name="choose_from">Choose language</string>
    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="punjabi">ਪੰਜਾਬੀ</string>
    <string name="assistance">Hi, How may i Assist you ?</string>
    <string name="continue_text">Continue</string>
    <string name="enter_first_name"> First Name</string>
    <string name="enter_last_name"> Last Name</string>
    <string name="enter_username">Name</string>
    <string name="your_email_address">your email address</string>
    <string name="proceed">Proceed</string>
    <string name="enter_your_details">Enter Your Details</string>
    <string name="login_gplus">Login with Google </string>
    <string name="username_error">Username should be more three characters</string>
    <string name="email_error">Enter a valid email</string>
    <string name="submit">Submit</string>
    <string name="phone_error">Enter correct phone number</string>
    <string name="waiting">waiting</string>
    <string name="second">sec</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="phone_number">phone number</string>
    <string name="enter_otp_here">Enter otp here</string>
    <string name="waiting_1_sec">waiting 1 sec</string>
    <string name="chandigarh_smart">Chandigarh Smart App</string>
    <string name="city_beautiful">The City Beautiful</string>
    <string name="enter_query">enter query</string>
    <string name="search">Search</string>
    <string name="listen">Listen</string>
    <string name="no_internet">Internet connection not available</string>
    <string name="logout">Logout</string>
    <string name="grant_audio">Please grant permissions to record audio</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="what_you_do">What can you do</string>
    <string name="help">Help</string>
    <string name="send_feedback">Send Ticket</string>
    <string name="enter_your_otp">Enter your OTP</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="out_of_scope">Out of scope for Hackathon 2017</string>
    <string name="view_tickets">View Ticket</string>
    <string name="ok_btn"> Create Ticket</string>
    <string name="cancel_btn">Cancel</string>
    <string name="ticket_preview">Ticket Preview</string>
    <string name="email_exist">Email already exists</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="error_subject">Enter Subject</string>
    <string name="error_desc">Enter Description</string>
    <string name="select_department">Okay!! Please select a department for which you want to create a ticket.</string>
    <string name="feedback_created">Ticket created with a Reference ID:  </string>
    <string name="creating_feedback">Creating ticket...</string>

    <string name="here_go">Here you go...</string>
    <string name="email_not_verified">Your email verification is pending, please check your email and activate account first !</string>
    <string name="feedback_details">Ticket Details</string>
    <string name="feedbacks">All Tickets</string>
    <string name="feedback_status">Ticket Status :</string>
    <string name="feedback_ref">Ticket Reference :</string>
    <string name="feedback_na"> NA</string>


    /* AI Actions and Events and parameters*/
    <string name="createticket">createticket</string>
    <string name="fetchalltickets">fetchalltickets</string>
    <string name="department">department</string>
    <string name="ticketsubject">ticketsubject</string>
    <string name="ticketdesc">ticketdesc</string>
    <string name="save_ticket">save ticket</string>
    <string name="image">image</string>
    <string name="department_text">Department:</string>
    <string name="subject_text">Subject:</string>
    <string name="description_text">Description:</string>


</resources>
