<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/icon_orange_color"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/crossicon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="15dp"
            android:padding="5dp"
            android:src="@drawable/closeicon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/image"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/ticket_preview"
            android:textColor="@color/aidialog_background"
            android:textSize="25sp" />

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@android:color/white"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="2sp"
        card_view:cardUseCompatPadding="true"
        card_view:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvdepartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/department_text"
                android:textSize="20sp"
                android:textStyle="bold" />


            <Spinner
                android:id="@+id/spdepartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />


            <TextView
                android:id="@+id/tvsubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/subject_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tvsubject_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvdescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/description_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tvdescription_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textSize="14sp"
                android:textStyle="italic" />

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/ll_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            android:id="@+id/createbtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:text="@string/ok_btn" />

    </LinearLayout>

</LinearLayout>